tests/invalid/type/return_self.pts
prototype Box {
    int v;

    function set(int x) : void {
        self.v = x;
        return self;
    }
}
